--- a/notes/filters.html
+++ b/notes/filters.html
@@ -1,1 +1,155 @@
 
+<!doctype html>
+<html>
+
+	<head>
+
+		<style type="text/css">
+
+		body {
+			font-family: arial;
+		}
+
+		p {
+			color: black;
+			font-size: 15px;
+		}
+
+		.box1 {
+			width: 100%;
+			height: auto;
+			background-color: gray;
+		}
+		
+		.box2 {
+			width: 100%;
+			height: auto;
+			background-color: lightsteelblue;
+		}
+
+/*  Filter - Universerial for selectors
+
+	grayscale(number or %)
+	brightness(number or %)
+	contrast(number or %)
+	saturate(number or %)
+	sepia(number or %)
+	invert(number or %)
+	opacity(number or %)
+
+	blur(px)
+
+	hue-rotate(deg)
+	drop-shaddow([horizontal offset] [vertical offset] [blur radius] [color])
+
+	COMBINE FILTERS BY SPACE SEPERATION
+
+	-webkit
+
+	*/
+
+/*  Blending Modes
+
+	UNSUPPORTED ALL BROWSERS
+
+	blend-mode
+
+	■ normal
+	■ multiply
+	■ screen
+	■ overlay
+	■ darken
+	■ lighten
+	■ color-dodge
+	■ color-burn 
+	■ hard-light 
+	■ soft-light 
+	■ difference 
+	■ exclusion 
+	■ hue
+	■ saturation 
+	■ color
+	■ luminosity
+
+	background-blend-mode
+	box-shaddow-blend-mode
+	text-shaddow-blend-mode
+	foreground-blend-mode
+
+
+	*/
+
+Template 
+
+/*  
+
+
+	*/
+
+
+
+	</style>
+
+		</head>
+
+	<body>
+
+<div class="box1">
+	
+<p classs="ligatures">This is a paragraph under heading one. </p>
+
+	<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+
+	<p class="">Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> 
+
+	<p class="">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+
+	<p class="">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+<p classs="">This is a paragraph under heading one. </p>
+
+	<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+
+	<p class="">Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> 
+
+	<p class="">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+
+	<p class="">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+
+
+<p class=""><a href="linkone.org" title="link">This is link ONE</a></p>
+
+</div>
+
+<div class="box2">
+
+<p classs="">This is a paragraph under heading one. </p>
+
+	<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+
+	<p class="">Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> 
+
+	<p class="">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+
+	<p class="">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+<p classs="">This is a paragraph under heading one. </p>
+
+	<p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+
+	<p class="">Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p> 
+
+	<p class="">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+
+	<p class="">It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+</div>
+
+
+
+
+	</body>
+
+</html>
+
