--- a/notes/backgrounds-borders.html
+++ b/notes/backgrounds-borders.html
@@ -126,8 +126,47 @@
 
 	*/
 
-YOUR STOPPED AT P56 GET TRHOUGH PAGE 85 NEXT TIME.
-SHOULD BE QUICK
+
+/* /////Borders //////*/
+
+/*  Border Image
+
+	border-image-source()
+	border-image-slice 		#/%1		#/%2		#/%3		#/%4
+							TOP 		BOTTOM 		SIDES		CORNERS
+	border-image-width  	#/%1		#/%2		#/%3		#/%4 	auto
+	border-image-outset
+	border-image-repeat
+		stretch
+		repeat
+		round
+		space 	
+	
+	SHORTHND	source slice / width / outset repeat		
+
+	PATCHY SUPPORT
+
+	*/
+
+/*  Border Corner Shape
+
+	curve
+	bevel
+	scoop
+	notch
+
+	*/
+
+	div.border-corner-shape {
+		border-corner-shape: ;
+	}
+
+/*  
+
+	See pages on gradiants
+
+	*/
+
 
 
 Template 
